# JSGenerator

./: .gitignore  README.md  pyproject.toml
examples/: README.md  example_abs.py
jsgenerator/: __init__.py  generate.py  utils.py
